refactor(handler & services): to reflect the sql changes
